# undefined_behavior_study

./: .gitignore  .travis.yml  .travis.yml.swp  CMakeLists.txt  README.md  appveyor.yml  associate_warnings.py  download_msvc_files.py  generate_results.bash  generate_results.bat  generate_results.ps1  print_results.py  ubuntu_docker_generate_results.bash  ubuntu_docker_generate_results.txt
src/: access_after_realloc.cpp  array_out_of_bounds.cpp  automatic_variable_over_stack.cpp  bad_aliasing.cpp  bad_alignment.cpp  bad_identifier_name.cpp  debug_help.hpp  delete_incomplete_type.cpp  dereferencing_nullptr.cpp  divide_by_zero.cpp  initialize_std_string_with_nullptr.cpp  large_double_to_float.cpp  large_double_to_int.cpp  malloc_cast_pod_struct.cpp  malloc_reinterpret_cast_pod_struct.cpp  mutate_const_value.cpp  no_undefined_behavior.cpp  non_trivial_destructor_and_global.cpp  non_trivial_destructor_and_global.h  odr_violation_function.cpp  odr_violation_function_lib.cpp  odr_violation_struct_ret.cpp  odr_violation_struct_ret_lib.cpp  odr_violation_struct_ret_lib.h  operator_star_on_empty_optional.cpp  out_of_bounds_pointer.cpp  preincrement_plus_postincrement.cpp  preincrement_plus_value.cpp  read_from_old_type.cpp  reading_uninitialized_value_add.cpp  reading_uninitialized_value_cout.cpp  reading_uninitialized_value_func_arg.cpp  reading_uninitialized_value_if.cpp  reading_uninitialized_value_lib.cpp  reading_uninitialized_value_lib.h  reading_uninitialized_value_lib_call_cref.cpp  reading_uninitialized_value_lib_call_ptr.cpp  reading_uninitialized_value_partial.cpp  reading_uninitialized_value_printf.cpp  reading_uninitialized_value_return.cpp  (+32 more)
